# otus_hw_12_chain_of_responsibilities

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: constants.py  container.py  main.py
src/adapters/: __init__.py  collision.py  i_rotate_area.py  intersection.py  meta_.py  movable_forward.py
src/commands/: __init__.py  abstract_.py  check_collision.py  check_location.py  check_object_intersection.py  empty.py  exceptions.py  get_ioc.py  get_resolver.py  hard_stop.py  injectable.py  macro_check_collision.py  macro_move.py  move_u_object.py  register.py  rotate_intersection.py  soft_stop.py  start_consumer_in_thread.py
src/conditions/: __init__.py  abstract_.py  base.py  default.py  hard_stop.py  move_to.py  soft_stop.py
src/handlers/: __init__.py  abstract_.py  error_handler.py
src/ioc/: __init__.py  ioc_register.py  ioc_storage.py
src/objects/: __init__.py  context.py  coordinates_objects.py  exceptions.py  uobj.py  vector.py
src/tests/: conftest.py  test_commands.py  test_coordinates_instances.py  test_smoke.py
